Added Social QP-CBF

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Social-IMPC-DR"]
 	path = Social-IMPC-DR
 	url = https://github.com/abj247/Social-IMPC-DR.git
+[submodule "Social-QP-CBF"]
+	path = Social-QP-CBF
+	url = https://github.com/abj247/Social-QP-CBF.git
